--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <img src="images/main/visual_banner.jpg" alt="">
             </div>
             <div class="visual_text">
-                <p>창의적인 아이디어와 전문적인 실행력으로 <br> 여러분의 이야기를 생생한 콘텐츠로 만들어 드립니다.</p>
+                <p><span>창의적인 아이디어와 전문적인 실행력으로<br></span>여러분의 이야기를 생생한 콘텐츠로 만들어 드립니다.</p>
             </div>
             <div class="scroll_down">
                 <span class="motion"></span>
@@ -146,8 +146,10 @@
 
         <main id="container">
             <section id="business_introduce">
-                <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" >기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을 소개합니다.</h2>
-                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-anchor-placement="center-bottom">
+                <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
+                    소개합니다.</h2>
+                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true"
+                    data-aos-anchor-placement="center-bottom">
                     <ul class="business_menu">
                         <li>
                             <p>영상제작</p>
@@ -463,11 +465,6 @@
 
         <footer id="footer">
             <div class="footer">
-                <h1 class="logo">
-                    <a href="#">
-                        <img src="images/footer/logo2.svg" alt="">
-                    </a>
-                </h1>
                 <div class="footer_text">
                     <ul>
                         <li>대표이사:김주성</li>
@@ -476,18 +473,19 @@
                     </ul>
                     <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                     <p>Copyright @2023~ Contopia. All rights reserved.</p>
+                    <p><a href="#">개인정보처리방침</a></p>
                 </div>
                 <div class="sns_link">
                     <ul>
                         <li><a href="https://www.youtube.com/@contopia" target="_blank">
-                            <img src="images/footer/youtube.svg" alt="">
-                        </a></li>
+                                <img src="images/footer/youtube.svg" alt="">
+                            </a></li>
                         <li><a href="https://vimeo.com/showcase/9521706" target="_blank">
-                            <img src="images/footer/vimeo.svg" alt="">
-                        </a></li>
+                                <img src="images/footer/vimeo.svg" alt="">
+                            </a></li>
                         <li><a href="https://blog.naver.com/contopia" target="_blank">
-                            <img src="images/footer/blog.svg" alt="">
-                        </a></li>
+                                <img src="images/footer/blog.svg" alt="">
+                            </a></li>
                     </ul>
                 </div>
             </div>
