--- a/sub/certification.html
+++ b/sub/certification.html
@@ -127,129 +127,104 @@
             <div class="container">
                 <ol class="item-tab">
                     <li data-cate="all" class="on"><a>ALL</a></li>
-                    <li data-cate="patent"><a>특허</a></li>
-                    <li data-cate="auth"><a>인증</a></li>
+                    <!-- <li data-cate="patent"><a>특허</a></li> -->
+                    <li data-cate="patent_auth"><a>특허/인증</a></li>
                     <li data-cate="award"><a>수상</a></li>
                 </ol>
         
                 <ul class="awards-list item-list">
-                    <li class="patent"><a>
-                            <div class="img"><img
-                                    src="../images/sub/patent5.jpg">
-                            </div><span class="cate">출원완료보고서</span>
-                            <p>웹클라우드 기반 프로젝트 관리 및 화상회의 통합서비스 제공 시스템</p>
-                        </a></li>
-                    <li class="patent"><a>
-                            <div class="img"><img
-                                    src="../images/sub/patent4.jpg">
-                            </div><span class="cate">대한민국 특허청</span>
-                            <p>디지털 영상 명함 제작 서비스 제공 시스템</p>
-                        </a></li>
-                    <li class="patent"><a>
-                            <div class="img"><img
-                                    src="../images/sub/patent3.jpg">
-                            </div><span class="cate">출원완료보고서</span>
-                            <p>하이라이트 영상 자동 편집 시스템</p>
-                        </a></li>
-                    <li class="patent"><a>
-                            <div class="img"><img
-                                    src="../images/sub/patent2.jpg">
-                            </div><span class="cate">출원완료보고서</span>
-                            <p>비즈니스 영상명함 제작 및 제작된 영상명함을 활용한 비즈니스 세일즈 연계 시스템</p>
-                        </a></li>
-                    <li class="patent"><a>
-                            <div class="img"><img
-                                    src="../images/sub/patent1.jpg">
-                            </div><span class="cate">출원완료보고서</span>
-                            <p>비즈니스 영상명함 제작 및 관리 서비스 제공 시스템</p>
-                        </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth18.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth19.jpg"></div><span 
                                 class="cate">부산광역시</span>
                             <p>부산대표 기술창업기업 인증서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth17.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth18.jpg"></div><span
                                 class="cate">한국소프트웨어산업협회</span>
                             <p>소프트웨어사업자 일반 현황 관리확인서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth16.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth17.jpg"></div><span
                                 class="cate">중소벤처기업부</span>
                             <p>중소기업 확인서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth15.jpg"></div>
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth16.jpg"></div><span
+                                class="cate">대한민국 특허청</span>
+                            <p>비즈니스 영상명함 제작 및 관리 서비스 제공 시스템</p>
+                        </a></li>
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth15.jpg"></div>
                             <span class="cate">중소기업유통센터</span>
                             <p>직접생산확인증명서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth14.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth14.jpg"></div><span
                                 class="cate">한국산업기술진흥협회</span>
                             <p>기업부설연구소 인정서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth13.jpg">
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth13.jpg">
                             </div><span class="cate">부산광역시</span>
                             <p>출판사 신고확인증</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth12.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth12.jpg"></div><span
                                 class="cate">(사)한국에듀테크산업협회</span>
                             <p>이러닝사업자 신고확인서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth11.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth11.jpg"></div><span
                                 class="cate">부산광역시</span>
                             <p>통신판매업신고증</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth10.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth10.jpg"></div><span
                                 class="cate">부산광역시</span>
                             <p>부산대표 공유기업 지정서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth9.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth9.jpg"></div><span
                                 class="cate">해운대구청</span>
                             <p>비디오물제작업 신고증</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth8.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth8.jpg"></div><span
                                 class="cate">조달청</span>
                             <p>경쟁입찰참가자격등록증</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth7.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth7.jpg"></div><span
                                 class="cate">한국디자인진흥원</span>
                             <p>산업디자인전문회사 신고확인증</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth6.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth6.jpg"></div><span
                                 class="cate">부산광역시</span>
                             <p>부산대표 기술창업기업 인증서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth5.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth5.jpg"></div><span
                                 class="cate">벤처기업확인기관</span>
                             <p>벤처기업확인서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth4.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth4.jpg"></div><span
                                 class="cate">한국산업기술진흥협회</span>
                             <p>연구개발전담부서 인정서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth3.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth3.jpg"></div><span
                                 class="cate">중소벤처기업부</span>
                             <p>창업기업 확인서</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth2.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth2.jpg"></div><span
                                 class="cate">한국교육콘텐츠품질인증위원회</span>
                             <p>품질인증등급 AA</p>
                         </a></li>
-                    <li class="auth"><a>
-                            <div class="img"><img src="../images/sub/auth1.jpg"></div><span
+                    <li class="patent_auth"><a>
+                            <div class="img"><img src="../images/sub/patent_auth1.jpg"></div><span
                                 class="cate">SCI평가정보</span>
                             <p>기업신용등급 B+</p>
                         </a></li>
@@ -295,11 +270,6 @@
     
         <footer id="footer">
             <div class="footer">
-                <h1 class="logo">
-                    <a href="#">
-                        <img src="../images/footer/logo2.svg" alt="">
-                    </a>
-                </h1>
                 <div class="footer_text">
                     <ul>
                         <li>대표이사:김주성</li>
@@ -308,17 +278,18 @@
                     </ul>
                     <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                     <p>Copyright @2023~ Contopia. All rights reserved.</p>
+                    <p><a href="#">개인정보처리방침</a></p>
                 </div>
                 <div class="sns_link">
                     <ul>
                         <li><a href="https://www.youtube.com/@contopia" target="_blank">
-                                <img src="../images/footer/youtube.svg" alt="">
+                                <img src="images/footer/youtube.svg" alt="">
                             </a></li>
                         <li><a href="https://vimeo.com/showcase/9521706" target="_blank">
-                                <img src="../images/footer/vimeo.svg" alt="">
+                                <img src="images/footer/vimeo.svg" alt="">
                             </a></li>
                         <li><a href="https://blog.naver.com/contopia" target="_blank">
-                                <img src="../images/footer/blog.svg" alt="">
+                                <img src="images/footer/blog.svg" alt="">
                             </a></li>
                     </ul>
                 </div>
