--- a/sub/certification.html
+++ b/sub/certification.html
@@ -283,13 +283,13 @@
                 <div class="sns_link">
                     <ul>
                         <li><a href="https://www.youtube.com/@contopia" target="_blank">
-                                <img src="images/footer/youtube.svg" alt="">
+                                <img src="../images/footer/youtube.svg" alt="">
                             </a></li>
                         <li><a href="https://vimeo.com/showcase/9521706" target="_blank">
-                                <img src="images/footer/vimeo.svg" alt="">
+                                <img src="../images/footer/vimeo.svg" alt="">
                             </a></li>
                         <li><a href="https://blog.naver.com/contopia" target="_blank">
-                                <img src="images/footer/blog.svg" alt="">
+                                <img src="../images/footer/blog.svg" alt="">
                             </a></li>
                     </ul>
                 </div>
