--- a/sub/company.html
+++ b/sub/company.html
@@ -206,11 +206,6 @@
 
         <footer id="footer">
             <div class="footer">
-                <h1 class="logo">
-                    <a href="#">
-                        <img src="../images/footer/logo2.svg" alt="">
-                    </a>
-                </h1>
                 <div class="footer_text">
                     <ul>
                         <li>대표이사:김주성</li>
@@ -219,6 +214,7 @@
                     </ul>
                     <p>부산 해운대구 수영강변대로 140 810호 (우동, 부산문화콘텐츠컴플렉스)</p>
                     <p>Copyright @2023~ Contopia. All rights reserved.</p>
+                    <p><a href="#">개인정보처리방침</a></p>
                 </div>
                 <div class="sns_link">
                     <ul>
