--- a/sub/certification.html
+++ b/sub/certification.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contopia</title>
     <!-- favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
     <!-- css -->
     <link rel="stylesheet" href="../css/certification.css">
     <link rel="stylesheet" href="../css/header.css">
