--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href="#">포트폴리오</a>
                     </li>
                     <li>
-                        <a href="#">홍보센터</a>
+                        <a href="sub/promotion.html">홍보센터</a>
                     </li>
                     <li>
                         <a href="#">상담문의</a>
@@ -111,12 +111,15 @@
                                     </ul>
                                 </li>
                                 <li>
+                                    <button></button>
                                     <a href="javascript:return false;">포트폴리오</a>
                                 </li>
                                 <li>
-                                    <a href="javascript:return false;">홍보센터</a>
+                                    <button></button>
+                                    <a href="sub/promotion.html">홍보센터</a>
                                 </li>
                                 <li>
+                                    <button></button>
                                     <a href="javascript:return false;">상담문의</a>
                                 </li>
                             </ul>
@@ -291,7 +294,7 @@
                                     <source src="video/main/portfolio_06.mp4" type="video/mp4">
                                 </video>
                             </div>
-                            <p>제12회 부산여성인권영화제 실시간 스트리밍</p>
+                            <p>부산여성인권영화제 실시간 스트리밍</p>
                             <p>행사</p>
                         </a>
                     </li>
@@ -346,7 +349,7 @@
                                     <source src="video/main/portfolio_11.mp4" type="video/mp4">
                                 </video>
                             </div>
-                            <p>제5회 통영여성영화제 스케치</p>
+                            <p>통영여성영화제 스케치</p>
                             <p>행사</p>
                         </a>
                     </li>
