--- a/sub/promotion.html
+++ b/sub/promotion.html
@@ -140,24 +140,24 @@
                     <li><a href="#">
                             <div class="img"><img src="../images/sub/promotion1.png">
                             </div>
-                            <p>새싹-솔트룩스, ‘AI 개발자 분야 취업을 위한 새싹 온라인 취업 특강’ 개최</p>
-                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2023.11.24</span></div>
+                            <p>새해복 많이 받으세요</p>
+                            <div class="cate-box"><span class="cate">공지사항</span><span class="date">2024.01.01</span></div>
                         </a></li>
                     <li><a href="#">
                             <div class="img"><img src="../images/sub/promotion1.png">
                             </div>
-                            <p>솔트룩스-NHN, AI 얼라이언스로 인공지능 산업 판 흔든다</p>
-                            <div class="cate-box"><span class="cate">뉴스</span><span class="date">2023.11.14</span></div>
+                            <p>콘토피아 홈페이지 리뉴얼 오픈 안내</p>
+                            <div class="cate-box"><span class="cate">뉴스</span><span class="date">2023.12.30</span></div>
                         </a></li>
                     <li><a href="#">
                             <div class="img"><img src="../images/sub/promotion1.png"></div>
-                            <p>솔트룩스, ‘NHN 다이퀘스트’ 인수로 국내 최대 AI 그룹 지위 확보</p>
+                            <p>(주)파운더 NIPA 우수기업 선정</p>
                             <div class="cate-box"><span class="cate">뉴스</span><span class="date">2023.11.14</span></div>
                         </a></li>
                     <li><a href="#">
                             <div class="img"><img src="../images/sub/promotion1.png">
                             </div>
-                            <p>생성 AI 서비스 기업 ‘플루닛’, TV 광고 본격 공개…풍성한 이벤트도 진행</p>
+                            <p>하이라이토피아 웹플랫폼 개발</p>
                             <div class="cate-box"><span class="cate">뉴스</span><span class="date">2023.11.07</span></div>
                         </a></li>
                     <li><a href="#">
