--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <a href="sub/promotion.html">홍보센터</a>
                     </li>
                     <li>
-                        <a href="#">상담문의</a>
+                        <a href="sub/inquiry.html">상담문의</a>
                     </li>
                 </ul>
 
@@ -111,16 +111,13 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <button></button>
                                     <a href="javascript:return false;">포트폴리오</a>
                                 </li>
                                 <li>
-                                    <button></button>
                                     <a href="sub/promotion.html">홍보센터</a>
                                 </li>
                                 <li>
-                                    <button></button>
-                                    <a href="javascript:return false;">상담문의</a>
+                                    <a href="sub/inquiry.html">상담문의</a>
                                 </li>
                             </ul>
                         </li>
@@ -450,18 +447,18 @@
             </ul>
         </section>
 
-        <section id="contact">
-            <div class="contact_text">
+        <section id="contact_banner">
+            <div class="contact_banner_text">
                 <div class="title">
                     <h2>궁금한 점이 있으신가요? <br> 지금 바로 물어보세요.</h2>
                 </div>
                 <h2 class="typing02"></h2>
             </div>
-            <div class="contact_btn">
+            <div class="contact_banner_btn">
                 <a href="#">문의 바로가기</a>
             </div>
         </section>
-        <!-- contact_E -->
+        <!-- contact_banner_E -->
 
         <footer id="footer">
             <div class="footer">
