--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#">포트폴리오</a>
+                        <a href="sub/portfolio.html">포트폴리오</a>
                     </li>
                     <li>
                         <a href="sub/promotion.html">홍보센터</a>
@@ -111,7 +111,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:return false;">포트폴리오</a>
+                                    <a href="sub/portfolio.html">포트폴리오</a>
                                 </li>
                                 <li>
                                     <a href="sub/promotion.html">홍보센터</a>
@@ -142,11 +142,10 @@
         <!-- visual_banner_E -->
 
         <main id="container">
-            <section id="business_introduce">
-                <h2 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
+            <section id="business_introduce"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
+                <h2>기대 이상의 결과물로 혁신을 제공하는 <br> 콘토피아의 사업을
                     소개합니다.</h2>
-                <div class="business_menu_wrap" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true"
-                    data-aos-anchor-placement="center-bottom">
+                <div class="business_menu_wrap">
                     <ul class="business_menu">
                         <li>
                             <p>영상제작</p>
@@ -226,148 +225,136 @@
             </section>
             <!-- business_introduce_E -->
 
-            <section id="portfolio">
+            <section id="portfolio"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
                 <h2>최고의 품질과 전문성을 보장합니다.</h2>
-                <ul class="video_wrap" oncontextmenu="return false">
+                <ul class="img_wrap" oncontextmenu="return false">
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_01.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_01.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/18_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio12.png" alt="부산형 워케이션">
                             </div>
                             <p>부산형 워케이션</p>
                             <p>홍보</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_02.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_02.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/17_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio11.png" alt="부산형 워케이션">
                             </div>
-                            <p>새마을운동중앙회_탄소중립</p>
+                            <p>저스트원더</p>
                             <p>홍보</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_03.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_03.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/16_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio10.png" alt="부산형 워케이션">
                             </div>
-                            <p>BNK Fintech Lab Motion Video</p>
+                            <p>SW융합작품전시회</p>
                             <p>홍보</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_04.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_04.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/15_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio09.png" alt="부산형 워케이션">
                             </div>
-                            <p>ICT 이노베이션스퀘어 온라인 설명회</p>
+                            <p>스타일테크 지원사업</p>
+                            <p>홍보</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sub/portfolio/detail/14_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio08.png" alt="부산형 워케이션">
+                            </div>
+                            <p>개발자양성교육</p>
+                            <p>홍보</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sub/portfolio/detail/13_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio07.png" alt="부산형 워케이션">
+                            </div>
+                            <p>고품격커피공장</p>
+                            <p>홍보</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sub/portfolio/detail/12_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio06.png" alt="부산형 워케이션">
+                            </div>
+                            <p>코드브로스 워크폼</p>
+                            <p>홍보</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="sub/portfolio/detail/11_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio05.png" alt="부산형 워케이션">
+                            </div>
+                            <p>동명대학교 인공지능 아두이노!</p>
                             <p>교육</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_05.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_05.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/10_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio04.png" alt="부산형 워케이션">
                             </div>
-                            <p>스마스시티 부산포럼 세미나</p>
-                            <p>교육</p>
+                            <p>땅울림 활동 발표 대회</p>
+                            <p>스케치</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_06.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_06.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/09_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio03.png" alt="부산형 워케이션">
                             </div>
-                            <p>부산여성인권영화제 실시간 스트리밍</p>
-                            <p>행사</p>
+                            <p>가야대학교 나이팅게일 선서식</p>
+                            <p>스케치</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_07.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_07.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/08_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio02.png" alt="부산형 워케이션">
                             </div>
-                            <p>고품격 커피공장</p>
+                            <p>스마트시티 학술용역 결과보고</p>
                             <p>홍보</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_08.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_08.mp4" type="video/mp4">
-                                </video>
+                        <a href="sub/portfolio/detail/07_film.html">
+                            <div class="preview">
+                                <span></span><span></span><span></span><span></span>
+                                <img id="portfolio_img" src="images/main/portfolio01.png" alt="부산형 워케이션">
                             </div>
-                            <p>제주특별자치도_수범사례</p>
+                            <p>스마트시티 실증랩 소개</p>
                             <p>홍보</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_09.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_09.mp4" type="video/mp4">
-                                </video>
-                            </div>
-                            <p>부산경제진흥원</p>
-                            <p>홍보</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_10.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_10.mp4" type="video/mp4">
-                                </video>
-                            </div>
-                            <p>한국능률협회_직장 내 괴롭힘 방지법</p>
-                            <p>교육</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_11.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_11.mp4" type="video/mp4">
-                                </video>
-                            </div>
-                            <p>통영여성영화제 스케치</p>
-                            <p>행사</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <div class="video_inner">
-                                <video poster="images/main/portfoli_12.png" muted controlslist="nodownload">
-                                    <source src="video/main/portfolio_12.mp4" type="video/mp4">
-                                </video>
-                            </div>
-                            <p>(주)경성테크놀러지</p>
-                            <p>행사</p>
                         </a>
                     </li>
                 </ul>
                 <div class="portfolio_btn">
-                    <a href="#">포트폴리오 바로가기</a>
+                    <a href="sub/portfolio.html">포트폴리오 바로가기</a>
                 </div>
             </section>
         </main>
-        <section id="marquee">
+        <section id="marquee"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
             <h2>다양한 가치를 가진 기업의 여정에 함께 하겠습니다.</h2>
             <div class="marquee_wrap">
                 <div class="marquee-top">
@@ -420,7 +407,7 @@
         </section>
         <!-- marquee_E -->
 
-        <section id="notice">
+        <section id="notice"  data-aos="fade-up" data-aos-duration="1500" data-aos-once="true">
             <h2>새로운 소식을 빠르게 만날 수 있습니다.</h2>
             <ul class="notice_list">
                 <li>
