--- a/sub/promotion.html
+++ b/sub/promotion.html
@@ -58,7 +58,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="javascript:return false;">포트폴리오</a>
+                        <a href="../sub/portfolio.html">포트폴리오</a>
                     </li>
                     <li>
                         <a href="../sub/promotion.html">홍보센터</a>
@@ -103,7 +103,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:return false;">포트폴리오</a>
+                                    <a href="../sub/portfolio.html">포트폴리오</a>
                                 </li>
                                 <li>
                                     <a href="../sub/promotion.html">홍보센터</a>
@@ -125,15 +125,6 @@
         </div>
 
         <section class="pr">
-            <!-- <div class="search">
-                <div class="container">
-                    <div class="search-box">
-                        <input type="text" id="keyword" name="keyword" value="" placeholder="검색어를 입력해주세요"
-                            onfocus="this.placeholder=''" onblur="this.placeholder='검색어를 입력해주세요'">
-                        <button id="btn_search" class="btn-search" type="button"></button>
-                    </div>
-                </div>
-            </div> -->
             <div class="container">
                 <ol class="item-tab">
                     <li data-cate="all" class="on"><a>ALL</a></li>
@@ -182,12 +173,6 @@
                         </a>
                     </li>
                 </ul>
-                <!-- <nav class="navigation pagination" role="navigation">
-                    <h2 class="screen-reader-text">글 내비게이션</h2>
-                    <div class="nav-links" id="post_pagination"><a class="prev page-numbers disabled" data-paged="0"></a><span
-                            class="page-numbers current" data-paged="1">1</span><span class="page-numbers total"
-                            data-paged="26">26</span><a class="next page-numbers" data-paged="2"></a></div>
-                </nav> -->
             </div>
         </section>
 
