--- a/sub/inquiry.html
+++ b/sub/inquiry.html
@@ -58,7 +58,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#">포트폴리오</a>
+                        <a href="../sub/portfolio.html">포트폴리오</a>
                     </li>
                     <li>
                         <a href="../sub/promotion.html">홍보센터</a>
@@ -103,7 +103,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="javascript:return false;">포트폴리오</a>
+                                    <a href="../sub/portfolio.html">포트폴리오</a>
                                 </li>
                                 <li>
                                     <a href="../sub/promotion.html">홍보센터</a>
