--- a/sub/portfolio/detail/11_film.html
+++ b/sub/portfolio/detail/11_film.html
@@ -13,34 +13,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap"
         rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="../css/company.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../../../css/portfolio.css">
+    <link rel="stylesheet" href="../../../css/header.css">
+    <link rel="stylesheet" href="../../../css/footer.css">
     <!-- js -->
-    <script src="../js/jquery-3.7.1.min.js"></script>
-    <script src="../js/header.js"></script>
-    <script src="../js/typed.min.js"></script>
+    <script src="../../../js/jquery-3.7.1.min.js"></script>
+    <script src="../../../js/header.js"></script>
+    <script src="../../../js/typed.min.js"></script>
 </head>
 
 <body>
     <div id="wrap">
         <header id="header" class="header">
             <h1 class="logo">
-                <a href="../index.html">
-                    <img src="../images/header/logo.svg" alt="콘토피아 로고">
+                <a href="../../../index.html">
+                    <img src="../../../images/header/logo.svg" alt="콘토피아 로고">
                 </a>
             </h1>
             <nav class="nav">
                 <!-- pc_menu -->
                 <ul class="gnb">
                     <li>
-                        <a href="../sub/company.html">회사소개</a>
+                        <a href="../../../sub/company.html">회사소개</a>
                         <div class="submenu_wrap">
                             <div class="submenu">
                                 <ul>
-                                    <li><a href="../sub/company.html">회사개요</a></li>
-                                    <li><a href="../sub/history.html">회사연혁</a></li>
-                                    <li><a href="../sub/certification.html">특허/인증/수상</a></li>
+                                    <li><a href="../../../sub/company.html">회사개요</a></li>
+                                    <li><a href="../../../sub/history.html">회사연혁</a></li>
+                                    <li><a href="../../../sub/certification.html">특허/인증/수상</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -59,13 +59,13 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../sub/portfolio.html">포트폴리오</a>
+                        <a href="../../../sub/portfolio.html">포트폴리오</a>
                     </li>
                     <li>
-                        <a href="../sub/promotion.html">홍보센터</a>
+                        <a href="../../../sub/promotion.html">홍보센터</a>
                     </li>
                     <li>
-                        <a href="../sub/inquiry.html">상담문의</a>
+                        <a href="../../../sub/inquiry.html">상담문의</a>
                     </li>
                 </ul>
 
@@ -78,8 +78,8 @@
                     </a>
                     <ul class="m_menu">
                         <li class="m_logo">
-                            <a href="../index.html">
-                                <img src="../images/header/logo.svg" alt="콘토피아 로고">
+                            <a href="../../../index.html">
+                                <img src="../../../images/header/logo.svg" alt="콘토피아 로고">
                             </a>
                         </li>
                         <li class="m_gnb">
@@ -88,9 +88,9 @@
                                     <button></button>
                                     <a href="javascript:return false;">회사소개</a>
                                     <ul class="m_submenu">
-                                        <li><a href="../sub/company.html">회사개요</a></li>
-                                        <li><a href="../sub/history.html">회사연혁</a></li>
-                                        <li><a href="../sub/certification.html">특허/인증/수상</a></li>
+                                        <li><a href="../../../sub/company.html">회사개요</a></li>
+                                        <li><a href="../../../sub/history.html">회사연혁</a></li>
+                                        <li><a href="../../../sub/certification.html">특허/인증/수상</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -104,13 +104,13 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="../sub/portfolio.html">포트폴리오</a>
+                                    <a href="../../../sub/portfolio.html">포트폴리오</a>
                                 </li>
                                 <li>
-                                    <a href="../sub/promotion.html">홍보센터</a>
+                                    <a href="../../../sub/promotion.html">홍보센터</a>
                                 </li>
                                 <li>
-                                    <a href="../sub/inquiry.html">상담문의</a>
+                                    <a href="../../../sub/inquiry.html">상담문의</a>
                                 </li>
                             </ul>
                         </li>
@@ -120,82 +120,23 @@
         </header>
         <!-- header_E -->
 
-        <div id="visual_banner">
-            <img src="../images/sub/company/company.jpg" alt="회사개요 대표이미지">
-            <p>회사개요</p>
-        </div>
-        <!-- visual_banner -->
-
-        <section id="company">
-            <div class="company-title s1">
-                <h5>회사개요</h5>
-                <div>
-                    <h2>
-                        혁신적인 기술과 창의적인 아이디어를 기반으로
-                        <br> 고객들에게 가치를 제공하는 Contopia입니다.
-                    </h2>
-                    <p>
-                        우리는 첨단 기술을 활용하여 산업을 혁신시키고, 디지털 시대의 요구에 부응하는 다양한 제품과 서비스를 제공합니다.
-                        고객 중심의 접근과 끊임없는 혁신을 통해 우리는 고객들에게 최상의 경험을 제공하고 있습니다.
-                        우리의 비전은 지속 가능한 미래를 위해 기술 혁신을 선도하는 것입니다.
-                        회사로서의 사회적 책임을 다하며, 지속 가능한 경제 성장과 사회 발전에 기여하고 있습니다.
-                    </p>
-                </div>
-            </div>
-            <div class="company-title s2">
-                <h5>조직구성</h5>
-                <div>
-                    <h2>
-                        전문성을 바탕으로 책임 경영을 하는 조직 구성
-                    </h2>
-                    <p>
-                        우리는 ‘시도하지 않으면 아무런 변화가 없다’는 경영철학을 가지고 모든 임직원이 함께 고민하며 새로운 변화를 만들어 갑니다.
-                    </p>
-                    <table>
-                        <tr>
-                            <td>경영기획팀</td>
-                        </tr>
-                        <tr>
-                            <td>C&C팀</td>
-                        </tr>
-                        <tr>
-                            <td>Creative팀</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="company-title s3">
-                <h5>브랜드 스토리</h5>
-                <div>
-                    <h2>
-                        "콘텐츠의 이상향"
-                    </h2>
-                    <div class="center">
-                        <img src="../images/header/logo.svg" alt="콘토피아 로고">
-                        <p><span>contents</span> + <span>utopia</span></p>
+        <section id="portfolio-view">
+            <div class="inner">
+                <div class="portfolio-view__wrap">
+                    <div class="portfolio-view__inner">
+                        <div class="portfolio-view__top">
+                            <h3 class="portfolio-view__title vitro">인공지능 아두이노! 부산의 축제를 알려줘</h3>
+                            <div class="categorys">
+                                <span class="categorys__item">교육</span>
+                            </div>
+                        </div>
+                        <div class="portfolio-view__cont editor-contents">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/52850u12FPQ?si=6rWOkmp6M3R_-kp1" title="인공지능 아두이노! 부산의 축제를 알려줘" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                        </div>
                     </div>
-                    <p>
-                        Contopia는 "콘텐츠"와 "유토피아"의 조합으로, 현실과 이상이 어우러진 창의적인 세계를 의미합니다. 우리의 브랜드
-                        스토리는 영감과 상상력의 경계를 넘어 사람들에게 새로운 경험과 감동을 선사합니다. 우리는 혁신적인 콘텐츠 제작을 통해
-                        이상적인 세계의 가능성을 탐구하며, 독창적인 아이디어와 감동적인 스토리텔링으로 사람들의 마음을 움직입니다.
-                        Contopia는 현실과 상상력의 경계를 뛰어넘는 창의적인 콘텐츠로 새로운 현실을 창조합니다.
-                    </p>
-                </div>
-            </div>
-            <div class="company-title s4">
-                <h5>오시는길</h5>
-                <div>
-                    <h2>
-                        (주)파운더
-                    </h2>
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.3437267500585!2d129.12243907638288!3d35.17298455772491!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356892c36d3607cf%3A0x83663b6a50b198f9!2zKOyjvCntjIzsmrTrjZQ!5e0!3m2!1sko!2skr!4v1702279369331!5m2!1sko!2skr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
-        <!-- company_E -->
 
         <section id="contact_banner">
             <div class="contact_banner_text">
@@ -225,13 +166,13 @@
                 <div class="sns_link">
                     <ul>
                         <li><a href="https://www.youtube.com/@contopia" target="_blank">
-                                <img src="../images/footer/youtube.svg" alt="유튜브">
+                                <img src="../../../images/footer/youtube.svg" alt="유튜브">
                             </a></li>
                         <li><a href="https://vimeo.com/showcase/9521706" target="_blank">
-                                <img src="../images/footer/vimeo.svg" alt="비메오">
+                                <img src="../../../images/footer/vimeo.svg" alt="비메오">
                             </a></li>
                         <li><a href="https://blog.naver.com/contopia" target="_blank">
-                                <img src="../images/footer/blog.svg" alt="네이버 블로그">
+                                <img src="../../../images/footer/blog.svg" alt="네이버 블로그">
                             </a></li>
                     </ul>
                 </div>
@@ -240,6 +181,39 @@
         <!-- footer_E -->
     </div>
     <script>
+        $(function () {
+            //tab
+            // $('.item-tab li').click(function(event) {
+            //     event.preventDefault();        
+            //     $('.item-tab li').removeClass('on');         
+            //     // $(this).closest('li').addClass('on');
+            //     $(this).addClass('on');
+            // });
+
+            // 위 코드를 순수 자바스크립트로 변경
+            var itemTab = document.querySelectorAll('.item-tab li');
+            for (var i = 0; i < itemTab.length; i++) {
+                itemTab[i].addEventListener('click', function (event) {
+                    event.preventDefault();
+                    for (var j = 0; j < itemTab.length; j++) {
+                        itemTab[j].classList.remove('on');
+                    }
+                    this.classList.add('on');
+                    // data-cate 속성을 이용하여 필터링
+                    var cate = this.getAttribute('data-cate');
+                    var item = document.querySelectorAll('.portfolio-list li');
+                    for (var k = 0; k < item.length; k++) {
+                        item[k].style.display = 'none';
+                        if (item[k].classList.contains(cate)) {
+                            item[k].style.display = 'block';
+                        } else if (cate == 'all') {
+                            item[k].style.display = 'block';
+                        }
+                    }
+                });
+            }
+        })
+
         // contact_banner_typing
         var ContactOptions = {
             stringsElement: '#contact_banner .title',
