--- a/sub/portfolio/detail/11_film.html
+++ b/sub/portfolio/detail/11_film.html
@@ -125,7 +125,7 @@
                 <div class="portfolio-view__wrap">
                     <div class="portfolio-view__inner">
                         <div class="portfolio-view__top">
-                            <h3 class="portfolio-view__title vitro">인공지능 아두이노! 부산의 축제를 알려줘</h3>
+                            <h3 class="portfolio-view__title vitro">인공지능 아두이노! <br> 부산의 축제를 알려줘</h3>
                             <div class="categorys">
                                 <span class="categorys__item">교육</span>
                             </div>
