--- a/sub/portfolio/detail/16_film.html
+++ b/sub/portfolio/detail/16_film.html
@@ -125,7 +125,7 @@
                 <div class="portfolio-view__wrap">
                     <div class="portfolio-view__inner">
                         <div class="portfolio-view__top">
-                            <h3 class="portfolio-view__title vitro">SW융합작품전시회 코딩 워크스페이스 시설소개</h3>
+                            <h3 class="portfolio-view__title vitro">SW융합작품전시회 <br> 코딩 워크스페이스 시설소개</h3>
                             <div class="categorys">
                                 <span class="categorys__item">홍보</span>
                             </div>
